--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
           <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
-                <a href="Edu.html"> <span class="ico-circle"><i class="bi bi-pencil-fill"></i></span></a>
+                <a href="Maps/Edu.html"> <span class="ico-circle"><i class="bi bi-pencil-fill"></i></span></a>
               </div>
               <div class="service-content">
                 <h2 class="s-title">Universities</h2>
@@ -222,7 +222,7 @@
                 <span class="ico-circle"><i class="bi bi-bag"></i></span>
               </div>
               <div class="service-content">
-                <a href="Edu.html"><h2 class="s-title">Hotels</h2></a>
+                <a href="Maps/Hotels.html"><h2 class="s-title">Hotels</h2></a>
                 <p class="s-description text-center">
                 </p>
               </div>
@@ -231,7 +231,7 @@
           <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
-                <a href="Hospitals.html"><span class="ico-circle"><i class="bi bi-activity"></i></span></a>
+                <a href="Maps/Hospitals.html"><span class="ico-circle"><i class="bi bi-activity"></i></span></a>
               </div>
               <div class="service-content">
                 <h2 class="s-title">Hospitals</h2>
@@ -244,7 +244,7 @@
           <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
-                <a href="Edu.html"><span class="ico-circle"><i class="bi bi-binoculars"></i></span></a>
+                <a href="Maps/TP.html"><span class="ico-circle"><i class="bi bi-binoculars"></i></span></a>
               </div>
               <div class="service-content">
                 <h2 class="s-title">Tourist places</h2>
@@ -257,7 +257,7 @@
           <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
-                <a href="Edu.html"><span class="ico-circle"><i class="bi bi-bar-chart"></i></span></a>
+                <a href="Maps/Business.html"><span class="ico-circle"><i class="bi bi-bar-chart"></i></span></a>
               </div>
               <div class="service-content">
                 <h2 class="s-title">Businesses</h2>
@@ -270,7 +270,7 @@
           <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
-                <a href="Edu.html"><span class="ico-circle"><i class="bi bi-calendar4-week"></i></span></a>
+                <a href="Maps/Parks.html"><span class="ico-circle"><i class="bi bi-calendar4-week"></i></span></a>
               </div>
               <div class="service-content">
                 <h2 class="s-title">Parks</h2>
@@ -524,7 +524,7 @@
                     </div>
                     <div class="content-test">
                       <p class="description lead">
-                        My name is Kiran Patil. I’m a computer Engineere student at V.J.T.I. Matunga.. I’ve created over a dozen of project . I see myself as a relentless problem-solver, and I’m always looking for a new challenge. I’ve recently gotten interested in AI so i recently created a new Face Recognition Project using python.
+                        My name is Kiran Patil. I’m a computer Enigineering student at V.J.T.I. Matunga.. I’ve created lots of project . I see myself as a relentless problem-solver, and I’m always looking for a new challenge. I’ve recently gotten interested in AI so i recently created a new Face Recognition Project using python.
 
                       </p>
                     </div>
