--- a/Maps/Edu.html
+++ b/Maps/Edu.html
@@ -109,9 +109,11 @@
               <div class="abt-img">
                 <div id="map"></div>
                 <script src="Edu.js"></script>
-                <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjqwEYKZyLvbXi0zOu1iD4E7U4ZM60pw8&map_ids=5e512ad7d6cb9767&callback=initMap">
+                <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyACdlvRm2B6fXPQksLBvyVSq5kJudgV0Yg&map_ids=aa7db47704068366&callback=initMap">
                 </script><br><br>
-                <!-- <img src="assets/img/map3.jpg" class="img-fluid rounded b-shadow-a" alt=""><br><br><br> -->
+                <!-- <img src="assets/img/map3.jpg" class="img-fluid rounded
+                  
+                  b-shadow-a" alt=""><br><br><br> -->
               </div>
               </div>
               </div>
