All files added

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>AnyMap Bootstrap Portfolio Template - Index</title>
+  <title>AnyMap - Index</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
  <!-- font fontawesome links  -->
@@ -85,7 +85,7 @@
           <!-- <h2 class="hero-title mb-4">W<span style="color:aqua">E</span> AR<span style="color:aqua">E</span> AN<span style="color:aqua">Y</span>MA<span style="color:aqua">P</span></h2> -->
           <h2 class="hero-title mb-4">WE ARE ANY<span style="color:aqua">MAP</span></h2>
           
-          <p class="hero-subtitle"><span class="typed" data-typed-items="PROVIDING CUSTOM MAPS......,FOR SCHOOLS......, HOSPITALS....... , CORPORATIONS......"></span></p>
+          <p class="hero-subtitle"><span class="typed" data-typed-items="PROVIDING CUSTOMISED MAPS......,FOR SCHOOLS......, HOSPITALS....... , CORPORATIONS......"></span></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
           <br><br>
           <a class="nav-link scrollto" href="#about"><img src="assets/img/mouse.png" class="vert-move"></a>
@@ -300,12 +300,12 @@
                 <div class="swiper-slide">
                   <div class="testimonial-box">
                     <div class="author-test">
-                      <img src="assets/img/testimonial-2.jpg" alt="" class="rounded-circle b-shadow-a">
-                      <span class="author">Kiran Patil</span>
+                      <img src="assets/img/testimonial.jpg" alt="" class="rounded-circle b-shadow-a" width="150" height="166">
+                      <span class="author">Yash Chindhe</span>
                     </div>
                     <div class="content-test">
                       <p class="description lead">
-                        My name is Kiran Patil. I’m a computer Enigineering student at V.J.T.I. Matunga.. I’ve created lots of project . I see myself as a relentless problem-solver, and I’m always looking for a new challenge. I’ve recently gotten interested in AI so i recently created a new Face Recognition Project using python.
+                        My name is Yash Chindhe. I’m a computer Enigineering student at V.J.T.I., Matunga. I am an enthusiast learner and a relentless problem-solver.I always look up for new challenges in my life .
 
                       </p>
                     </div>
@@ -340,7 +340,7 @@
                   <div class="col-md-6">
                     <div class="title-box-2">
                       <h5 class="title-left">
-                        Send Message Us
+                        Send Message To Us
                       </h5>
                     </div>
                     <div>
@@ -385,19 +385,19 @@
                       </h5>
                     </div>
                     <div class="more-info">
-                      <p class="lead">  AnyMap is an online app or piece of software that provides users with interactive and Custmizable Maps According to their needs. The best applications of this type provide Customers right kind of information. The AnyMap features ready-made content tailored to the needs of specific Customers.</p>
+                      <p class="lead">  AnyMap is an online app or piece of software that provides users with Interactive and Custmizable Maps according to their needs. The best applications of this type provide customers the right kind of information. The AnyMap features ready-made content tailored to the needs of specific customers.</p>
 
                       <ul class="list-ico">
-                        <li><span class="bi bi-geo-alt"></span> 101 Mumbai,400060</li>
-                        <li><span class="bi bi-phone"></span> +917559390284</li>
-                        <li><span class="bi bi-envelope"></span> contact@example.com</li>
+                        <li><span class="bi bi-geo-alt"></span> VJTI, Mumbai,400019</li>
+                        <li><span class="bi bi-phone"></span> +917666105260</li>
+                        <li><span class="bi bi-envelope"></span> yashschindhe@gmail.com</li>
                       </ul>
                     </div>
                     <div class="socials">
                       <ul>
-                        <li><a href=""><span class="ico-circle"><i class="bi bi-facebook"></i></span></a></li>
-                        <li><a href=""><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li>
-                        <li><a href=""><span class="ico-circle"><i class="bi bi-twitter"></i></span></a></li>
+                        <li><a href="https://www.facebook.com/yash.chindhe.10"><span class="ico-circle"><i class="bi bi-facebook"></i></span></a></li>
+                        <li><a href="https://www.instagram.com/craz.yc.urious/"><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li>
+                        <li><a href="https://twitter.com/staryash25"><span class="ico-circle"><i class="bi bi-twitter"></i></span></a></li>
                         <li><a href=""><span class="ico-circle"><i class="bi bi-linkedin"></i></span></a></li>
                       </ul>
                     </div>
@@ -421,7 +421,7 @@
             <p class="copyright">&copy; Copyright <strong>AnyMap</strong>. All Rights Reserved</p>
             <div class="credits">
 
-              Designed by <a href="https://bootstrapmade.com/">Kiran Patil</a>
+              Designed by <a href="https://bootstrapmade.com/">Yash Chindhe</a>
             </div>
           </div>
         </div>
