--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
             <p class="copyright">&copy; Copyright <strong>AnyMap</strong>. All Rights Reserved</p>
             <div class="credits">
 
-              Designed by <a href="https://bootstrapmade.com/">Kiran Patil</a>
+              Designed by <a href="#">Kiran Patil</a>
             </div>
           </div>
         </div>
