--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
       <!-- <a href="index.html"><img src="assets/img/logo1.gif" alt="" class="img-fluid"></a> -->
-      <span class="logo" style="font-size: 36px;"><a href="index.html">AnyMap</a></span>
+      <span class="logo" style="font-size: 36px;"><a href="index.html"><span style="color:aqua">Any</span>Map</a></span>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -304,9 +304,8 @@
                       <span class="author">Kiran Patil</span>
                     </div>
                     <div class="content-test">
-                      <p class="description lead">
-                        My name is Kiran Patil. I’m a computer Enigineering student at V.J.T.I. Matunga.. I’ve created lots of project . I see myself as a relentless problem-solver, and I’m always looking for a new challenge. I’ve recently gotten interested in AI so i recently created a new Face Recognition Project using python.
-
+                      <p class="description lead" >
+                        "Hello everyone! My name is Kiran Patil, and I am a third-year computer engineering student at VJTI. I'm passionate about technology and the ways it can make a positive impact on our daily lives. So far, my studies have covered a wide range of subjects, including programming languages, computer architecture, and software engineering. I'm excited to continue learning and growing in my field, and I'm looking forward to the opportunities that come with being a computer engineering student."
                       </p>
                     </div>
                   </div>
@@ -398,7 +397,7 @@
                         <li><a href=""><span class="ico-circle"><i class="bi bi-facebook"></i></span></a></li>
                         <li><a href=""><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li>
                         <li><a href=""><span class="ico-circle"><i class="bi bi-twitter"></i></span></a></li>
-                        <li><a href=""><span class="ico-circle"><i class="bi bi-linkedin"></i></span></a></li>
+                        <li><a href="https://www.linkedin.com/in/kiran-patil-007/"><span class="ico-circle"><i class="bi bi-linkedin"></i></span></a></li>
                       </ul>
                     </div>
                   </div>
