--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                     </div>
                     <div class="content-test">
                       <p class="description lead" >
-                        "Hello everyone! My name is Kiran Patil, and I am a third-year computer engineering student at VJTI. I'm passionate about technology and the ways it can make a positive impact on our daily lives. So far, my studies have covered a wide range of subjects, including programming languages, computer architecture, and software engineering. I'm excited to continue learning and growing in my field, and I'm looking forward to the opportunities that come with being a computer engineering student."
+                        "Hello there! My name is Kiran Patil, and I am a third-year computer engineering student at VJTI. I'm passionate about technology and the ways it can make a positive impact on our daily lives. So far, my studies have covered a wide range of subjects, including programming languages, computer architecture, and software engineering. I'm excited to continue learning and growing in my field, and I'm looking forward to the opportunities that come with being a computer engineering student."
                       </p>
                     </div>
                   </div>
